# BAMB2026

./: README.md
Module 1/Part 1 Advanced Psychophysics/: README.md
Module 1/Part 2 Bayesian Observers/: README.md
Module 1/Part 3 Drift Diffusion Model/.ipynb_checkpoints/: tutorial_1C_DDM-Copy1-checkpoint.ipynb  tutorial_1C_DDM-checkpoint.ipynb
Module 3/: README.md  mini_projects.md  pyproject.toml
Module 3/part1_rl_basics/: README.md  tutorial_3a.ipynb
Module 3/part2_imitation_learning/: README.md  tutorial_3b.ipynb
Module2/: module2_part1_rl.ipynb  module2_part1_rl_solutions.ipynb
Module2/part_1/: module2_part1_rl.ipynb
datasets/: README.md
